--- a/frontend/src/components/Arrange/header.css
+++ b/frontend/src/components/Arrange/header.css
@@ -2,7 +2,7 @@
   margin-bottom: 0;
 }
 
-.header {
+.sticky_header {
   box-shadow: 3px 3px 8px -3px #ddd;
   background: #fff;
   z-index: 999;
@@ -18,15 +18,28 @@
   color: violet;
 }
 
-.dir_item {
+.dir_item a {
   text-decoration: none;
-  font-weight: 400;
-  font-size: 1rem;
-  color: white;
+  font-weight: 500;
+  font-size: 1.2rem;
+  color: var(--heading-color);
 }
 
 .portable {
   display: none;
-  color: (--heading-color);
+  color: var(--heading-color);
   font-size: 1.1rem;
+}
+
+.btn {
+  color: white;
+  background: blue;
+}
+
+.brand {
+  width: 30%;
+}
+
+dir_item a.awakeLink {
+  color: var(--secondary-color);
 }
