--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -2,19 +2,44 @@
   margin-bottom: 0;
 }
 
+.sticky_header {
+  box-shadow: 3px 3px 8px -3px #ddd;
+  background: #fff;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  line-height: 90px;
+  position: sticky;
+  width: 100%;
+  height: 90px;
+}
+
 .dir_item a:hover {
   color: violet;
 }
 
-.dir_item {
+.dir_item a {
   text-decoration: none;
-  font-weight: 400;
-  font-size: 1rem;
+  font-weight: 500;
+  font-size: 1.2rem;
   color: var(--heading-color);
 }
 
 .portable {
   display: none;
-  color: (--heading-color);
+  color: var(--heading-color);
   font-size: 1.1rem;
+}
+
+.btn {
+  color: white;
+  background: blue;
+}
+
+.brand {
+  width: 30%;
+}
+
+dir_item a.awakeLink {
+  color: var(--secondary-color);
 }
