--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -22,24 +22,19 @@
   text-decoration: none;
   font-weight: 500;
   font-size: 1.2rem;
-  color: var(--heading-color);
+  color: black;
 }
 
 .portable {
   display: none;
-  color: var(--heading-color);
+  color: orangered;
   font-size: 1.1rem;
 }
 
-.btn {
-  color: white;
-  background: blue;
-}
-
-.brand {
-  width: 30%;
+.brand img {
+  width: 60%;
 }
 
 dir_item a.awakeLink {
-  color: var(--secondary-color);
+  color: lightcoral;
 }
