--- a/frontend/src/components/Header/mock.css
+++ b/frontend/src/components/Header/mock.css
@@ -22,18 +22,18 @@
   text-decoration: none;
   font-weight: 500;
   font-size: 1.2rem;
-  color: var(--heading-color);
+  color: black;
 }
 
 .portable {
   display: none;
-  color: var(--heading-color);
+  color: orangered;
   font-size: 1.1rem;
 }
 
 .btn {
   color: white;
-  background: blue;
+  background: violet;
 }
 
 .brand img {
@@ -41,5 +41,5 @@
 }
 
 dir_item a.awakeLink {
-  color: var(--secondary-color);
+  color: lightcoral;
 }
