--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -38,3 +38,11 @@
 dir_item a.awakeLink {
   color: lightcoral;
 }
+
+.header {
+  width: 100%;
+  height: 80px;
+  line-height: 80px;
+  background: lightblue;
+  margin-bottom: 2px;
+}
