--- a/frontend/src/menu/menuShow.css
+++ b/frontend/src/menu/menuShow.css
@@ -25,8 +25,10 @@
 .menu_item {
   border-radius: 1rem;
   padding: 0.9rem;
-  border-bottom: 1px solid orange;
-  border-right: 1px solid orange;
+  border-bottom: 3px solid red;
+  border-right: 2px solid darkred;
+  border-top: 3px solid red;
+  border-left: 2px solid darkred;
 }
 
 .menu_img img {
