--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -2,7 +2,7 @@
   margin-bottom: 0;
 }
 
-.sticky_header {
+.glueHeader {
   box-shadow: 3px 3px 8px -3px #ddd;
   background: #fff;
   z-index: 999;
@@ -32,6 +32,56 @@
 }
 
 .brand img {
+  width: 20%;
+}
+
+dir_item a.awakeLink {
+  color: lightcoral;
+}
+
+.header {
+  width: 100%;
+  height: 100px;
+  line-height: 80px;
+  background: lightblue;
+  margin-bottom: 2px;
+}
+
+/*
+.main {
+  margin-bottom: 0;
+}
+
+.glueHeader {
+  box-shadow: 3px 3px 8px -3px #ddd;
+  background: #fff;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  line-height: 90px;
+  position: sticky;
+  width: 100%;
+  height: 90px;
+}
+
+.dir_item a:hover {
+  color: violet;
+}
+
+.dir_item a {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 1.2rem;
+  color: black;
+}
+
+.portable {
+  font-size: 1.3rem;
+  color: var(--heading-color);
+  display: none;
+}
+
+.brand img {
   width: 15%;
 }
 
@@ -46,3 +96,65 @@ dir_item a.awakeLink {
   background: lightblue;
   margin-bottom: 2px;
 }
+
+.options {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: calc(100% - 75%);
+  height: 100%;
+  background: #fff;
+  flex-direction: column;
+  line-height: 0.5rem;
+  justify-content: center;
+  z-index: 9999;
+}
+
+@media only screen and (max-width: 992px) {
+  .brand img {
+    width: 20%;
+  }
+
+  .directions {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.4);
+    z-index: 999;
+    display: none;
+  }
+
+  .options {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: calc(100% - 75%);
+    height: 100%;
+    background: #fff;
+    flex-direction: column;
+    line-height: 0.5rem;
+    justify-content: center;
+    z-index: 9999;
+  }
+
+  .show {
+    display: block;
+  }
+
+  .portable {
+    display: block;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .brand img {
+    width: 45%;
+  }
+
+  .options {
+    width: calc(100% - 50%);
+  }
+}
+*/
