--- a/frontend/src/components/Book/book.css
+++ b/frontend/src/components/Book/book.css
@@ -69,7 +69,7 @@
   width: 100%;
   padding: 0.4rem;
   border-radius: 0.5rem;
-  color: var(--heading-color);
+  color: black;
   font-size: 0.7rem;
   border-bottom: 1px solid gray;
   border: none;
